--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -65,7 +65,7 @@ footer {
     font-size: 19px;
     padding: 10px;
     padding-top: 9px;
-    padding-left: 20px;
+    padding-left: 30px;
     padding-right: 20px;
     margin-left: -5px;
     background-color: #242726;
@@ -84,4 +84,92 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media only screen and (max-width: 1199px) {
+  footer {
+    position: relative;
+    height: 290px;
+    background-color: #1d1f22;
+
+    p {
+      position: absolute;
+      bottom: 40px;
+      right: 50px;
+    }
+    h4 {
+      position: absolute;
+      font-size: 17px !important;
+      left: calc(50% - 140px);
+      top: 50px;
+    }
+  }
+  .footer__social-media-wrapper {
+    display: none;
+  }
+  .footer__input {
+    position: absolute;
+    left: calc(50% - 160px);
+    top: calc(50% - 50px);
+    input {
+      width: 225px !important;
+    }
+    input::placeholder {
+      font-size: 17px !important;
+      padding-left: 10px !important;
+    }
+  }
+  .footer__logo img {
+    width: 143px !important;
+    height: 57px !important;
+    object-fit: contain;
+    position: absolute;
+    bottom: 40px;
+    left: 0px;
+  }
+}
+@media only screen and (max-width: 599px) {
+  footer {
+    height: 211px;
+    padding-top: 0;
+    h4 {
+      top: 40px;
+      font-size: 14px !important;
+      left: calc(50% - 115px);
+    }
+    p {
+      bottom: 20px;
+      right: 55px;
+    }
+  }
+  .footer__logo {
+    img {
+      width: 78px !important;
+      height: 31px !important;
+      bottom: 30px;
+      margin-left: 50px !important;
+    }
+  }
+  .footer__input {
+    border-radius: 7px;
+    left: auto;
+    top: 75px;
+    input {
+      padding: 10px !important;
+      border-top-left-radius: 13px !important;
+      border-bottom-left-radius: 13px !important;
+      width: 188px !important;
+    }
+    input::placeholder {
+      font-size: 14px !important;
+    }
+  }
+  .xoxo {
+    padding: 11px !important;
+    padding-top: 13px !important;
+    padding-left: 13px !important;
+    padding-right: 13px !important;
+    border-top-right-radius: 11px !important;
+    border-bottom-right-radius: 11px !important;
+    font-size: 14px !important;
+  }
 }
