--- a/style/_main.scss
+++ b/style/_main.scss
@@ -41,19 +41,86 @@
     #30a996 42.53%,
     #00ffd9 100%
   );
-  border-radius: 10px;
+  border-radius: 15px;
   padding: 2px;
   margin: auto;
   button {
-    // border: 3px solid #2e8174;
-    width: 145px;
     height: 50px;
     border: none;
     outline: none;
-    border-radius: 10px;
+    border-radius: 15px;
     text-decoration: none;
     color: #fff;
     width: 145px;
     background-color: rgb(0, 0, 0);
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .main {
+    background-color: #1d1f22;
+    height: 720px;
+  }
+  .main__information {
+    margin-left: 50px;
+    margin-top: 80px;
+    width: 375px !important;
+  }
+  .main__information__tech {
+    margin-bottom: 25px;
+  }
+  .wrapper__btn {
+    border-radius: 7px;
+    button {
+      border-radius: 7px;
+    }
+  }
+  .main__image {
+    width: 60%;
+    height: 100%;
+    right: -65px;
+    img {
+      width: 100%;
+      height: fit-content;
+    }
+  }
+}
+@media only screen and (max-width: 599px) {
+  .main {
+    height: 650px;
+  }
+  .main__image {
+    width: 100%;
+    height: 100%;
+    top: 89px;
+    right: -6px;
+    img {
+      width: 100%;
+      height: 80%;
+    }
+  }
+  .main__information {
+    width: 306px !important;
+    margin-left: 25px;
+    margin-top: 35px;
+    h1 {
+      font-size: 40px;
+      line-height: 48.76px;
+      margin-bottom: 5px;
+      z-index: 1;
+      position: relative;
+    }
+  }
+  .main__information__tech {
+    line-height: 19.07px;
+    margin-bottom: 0px;
+    text-align: justify;
+    p {
+      font-size: 14px;
+    }
+  }
+  .wrapper__btn button {
+    font-size: 12px;
+    width: 108px;
+    height: 37px;
   }
 }
