--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,6 +1,5 @@
 nav {
-  height: 75px;
-
+  // background-color: white;
   .nav__logo {
     width: 15%;
   }
@@ -57,8 +56,37 @@ nav ul li {
   padding: 10px;
 }
 @media only screen and (max-width: 1199px) {
+  header {
+    position: relative;
+  }
+  nav {
+    padding-left: 50px;
+    padding-top: 30px !important;
+    padding-right: 20px;
+    background-color: #1d1f22;
+    margin-bottom: -1px;
+  }
+  .container-fluid {
+    padding-left: 0;
+  }
+  .navbar-toggler:focus {
+    box-shadow: none !important;
+  }
   .nav__links {
     padding-left: 12px;
+    position: relative;
+    z-index: 100000;
+    background-image: linear-gradient(
+      47.99deg,
+      rgb(46, 129, 116) 0%,
+      rgb(48, 169, 150) 42.53%,
+      rgb(0, 255, 217) 100%
+    );
+  }
+  .navbar-toggler-icon {
+    background-image: url(../assets/Burger.png) !important;
+    width: 90px;
+    height: 45px;
   }
   .nav__contact__fr {
     flex-direction: column;
@@ -74,5 +102,18 @@ nav ul li {
   }
   nav ul {
     align-items: normal;
+  }
+}
+@media only screen and (max-width: 599px) {
+  .logo {
+    width: 100px !important;
+  }
+  .navbar-toggler-icon {
+    width: 60px;
+  }
+  .navbar {
+    padding-top: 10px !important;
+    padding-left: 30px;
+    padding-right: 0;
   }
 }
