--- a/style/_services.scss
+++ b/style/_services.scss
@@ -24,6 +24,7 @@
     font-size: 40px;
     line-height: 48.76px;
     width: 780px;
+    max-width: 90%;
     margin: auto;
     font-weight: 600;
     margin-bottom: 70px;
@@ -73,9 +74,76 @@
       color: #807f7f;
       font-size: 19px;
       line-height: 25.87px;
-      width: 298px;
+      width: 70%;
       text-align: justify;
       font-weight: 600;
+    }
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .line {
+    width: 97px;
+  }
+  .bloc__services__main {
+    h2 {
+      font-size: 28px;
+      line-height: 34.13px;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    a {
+      margin-top: 0;
+      border-radius: 7px;
+      padding: 15px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+  .service {
+    margin-bottom: 45px;
+    img {
+      width: 100px !important;
+      height: 100px !important;
+    }
+  }
+}
+
+@media only screen and (max-width: 599px) {
+  .bloc__services__container {
+    padding-bottom: 40px;
+  }
+  .line {
+    margin: 50px auto 40px auto;
+    width: 55px;
+  }
+  .bloc__services__main {
+    h2 {
+      font-size: 18px;
+      line-height: 21.94px;
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+    a {
+      font-size: 12px;
+      padding: 10px;
+      padding-left: 15px;
+      padding-right: 14px;
+    }
+  }
+  .service {
+    margin-bottom: 10px;
+    img {
+      width: 70px !important;
+      height: 70px !important;
+    }
+    h3 {
+      font-size: 16px !important;
+      margin-bottom: 10px !important;
+    }
+    p {
+      font-size: 14px !important;
+      line-height: 19.07px !important;
+      width: 90% !important;
     }
   }
 }
