fix layout responsive tablet

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -112,6 +112,7 @@ footer {
     top: calc(50% - 50px);
     input {
       width: 225px !important;
+      padding: 12px !important;
     }
     input::placeholder {
       font-size: 17px !important;
@@ -125,6 +126,9 @@ footer {
     position: absolute;
     bottom: 40px;
     left: 0px;
+  }
+  .xoxo {
+    padding: 10px 20px 12px 20px !important;
   }
 }
 @media only screen and (max-width: 599px) {
@@ -153,10 +157,12 @@ footer {
     border-radius: 7px;
     left: auto;
     top: 75px;
+    border-radius: 11px !important;
+
     input {
-      padding: 10px !important;
-      border-top-left-radius: 13px !important;
-      border-bottom-left-radius: 13px !important;
+      padding: 7px !important;
+      border-top-left-radius: 9px !important;
+      border-bottom-left-radius: 9px !important;
       width: 188px !important;
     }
     input::placeholder {
@@ -164,12 +170,10 @@ footer {
     }
   }
   .xoxo {
-    padding: 11px !important;
-    padding-top: 13px !important;
-    padding-left: 13px !important;
-    padding-right: 13px !important;
+    padding: 11px 16px 9px 18px !important;
     border-top-right-radius: 11px !important;
     border-bottom-right-radius: 11px !important;
     font-size: 14px !important;
+    font-weight: 600;
   }
 }
