--- a/style/_bloc.scss
+++ b/style/_bloc.scss
@@ -51,8 +51,9 @@
 }
 @media only screen and (max-width: 1199px) {
   .bloc {
-    padding-top: 60px;
     width: 85%;
+    margin-top: -80px;
+    padding: 60px 40px 60px 40px;
     h2 {
       font-size: 28px !important;
       line-height: 34.13px !important;
@@ -71,12 +72,24 @@
       font-weight: 600;
     }
   }
+  .bloc__right {
+    p {
+      font-size: 17px !important;
+      line-height: 23.15px;
+    }
+    a {
+      padding: 15px 20px !important;
+    }
+  }
 }
 @media only screen and (max-width: 599px) {
   .bloc {
-    padding-top: 35px;
+    padding-top: 40px;
     padding-left: 0px;
     padding-right: 0px;
+    margin-top: -145px;
+    width: 80%;
+
     a {
       font-size: 12px !important;
     }
@@ -88,9 +101,13 @@
       margin-bottom: 15px;
     }
   }
-  .bloc__right p {
-    font-size: 14px !important;
-    line-height: 19.07px !important;
-    margin-bottom: 20px !important;
+  .bloc__right {
+    padding-left: 30px;
+    padding-right: 30px;
+    p {
+      font-size: 14px !important;
+      line-height: 19.07px !important;
+      margin-bottom: 20px !important;
+    }
   }
 }
