--- a/style/_services.scss
+++ b/style/_services.scss
@@ -44,7 +44,7 @@
     font-family: Montserrat;
     font-size: 16px;
     line-height: 19px;
-    font-weight: 600;
+    font-weight: bold;
   }
 }
 .bloc__services {
@@ -68,7 +68,7 @@
       text-align: center;
       font-weight: 600;
       margin-bottom: 23px;
-      margin-top: 6px;
+      margin-top: 10px;
     }
     p {
       color: #807f7f;
@@ -84,12 +84,17 @@
   .line {
     width: 97px;
   }
+  .bloc__services__container {
+    padding-bottom: 60px;
+  }
   .bloc__services__main {
     h2 {
       font-size: 28px;
       line-height: 34.13px;
       text-align: center;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
+      padding-left: 75px;
+      padding-right: 75px;
     }
     a {
       margin-top: 0;
@@ -97,13 +102,23 @@
       padding: 15px;
       padding-left: 20px;
       padding-right: 20px;
+      font-family: "Open Sans", sans-serif;
     }
   }
   .service {
     margin-bottom: 45px;
+    p {
+      font-size: 17px !important;
+      line-height: 23.15px !important;
+      width: 75% !important;
+    }
     img {
       width: 100px !important;
       height: 100px !important;
+    }
+    h3 {
+      font-size: 20px !important;
+      margin-top: 0 !important;
     }
   }
 }
@@ -144,6 +159,8 @@
       font-size: 14px !important;
       line-height: 19.07px !important;
       width: 90% !important;
+      padding-left: 8px;
+      padding-right: 8px;
     }
   }
 }
