--- a/style/style.css
+++ b/style/style.css
@@ -218,21 +218,28 @@ nav ul li a {
   text-decoration: none;
   color: #fff;
   width: 145px;
-  background-color: black;
+  background-color: #1d1f22;
 }
 
 @media only screen and (max-width: 1199px) {
   .main {
     background-color: #1d1f22;
-    height: 720px;
+    height: 760px;
   }
   .main__information {
     margin-left: 50px;
-    margin-top: 80px;
-    width: 375px !important;
+    margin-top: 50px;
+    width: 384px !important;
+  }
+  .main__information h1 {
+    line-height: 60.95px !important;
+  }
+  .main__information p {
+    font-size: 17px;
   }
   .main__information__tech {
     margin-bottom: 25px;
+    text-align: justify;
   }
   .wrapper__btn {
     border-radius: 7px;
@@ -243,19 +250,20 @@ nav ul li a {
   .main__image {
     width: 60%;
     height: 100%;
-    right: -65px;
   }
   .main__image img {
-    width: 100%;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    width: 120%;
+    height: 110%;
   }
 }
 
 @media only screen and (max-width: 599px) {
   .main {
     height: 650px;
+  }
+  .wrapper__btn {
+    -webkit-transform: translateX(13px);
+            transform: translateX(13px);
   }
   .main__image {
     width: 100%;
@@ -351,8 +359,9 @@ nav ul li a {
 
 @media only screen and (max-width: 1199px) {
   .bloc {
-    padding-top: 60px;
     width: 85%;
+    margin-top: -80px;
+    padding: 60px 40px 60px 40px;
   }
   .bloc h2 {
     font-size: 28px !important;
@@ -371,13 +380,22 @@ nav ul li a {
     color: #b1b0b2 !important;
     font-weight: 600;
   }
+  .bloc__right p {
+    font-size: 17px !important;
+    line-height: 23.15px;
+  }
+  .bloc__right a {
+    padding: 15px 20px !important;
+  }
 }
 
 @media only screen and (max-width: 599px) {
   .bloc {
-    padding-top: 35px;
+    padding-top: 40px;
     padding-left: 0px;
     padding-right: 0px;
+    margin-top: -145px;
+    width: 80%;
   }
   .bloc a {
     font-size: 12px !important;
@@ -386,6 +404,10 @@ nav ul li a {
     font-size: 18px !important;
     line-height: 21.94px !important;
     margin-bottom: 15px;
+  }
+  .bloc__right {
+    padding-left: 30px;
+    padding-right: 30px;
   }
   .bloc__right p {
     font-size: 14px !important;
@@ -440,7 +462,7 @@ nav ul li a {
   font-family: Montserrat;
   font-size: 16px;
   line-height: 19px;
-  font-weight: 600;
+  font-weight: bold;
 }
 
 .bloc__services {
@@ -481,7 +503,7 @@ nav ul li a {
   text-align: center;
   font-weight: 600;
   margin-bottom: 23px;
-  margin-top: 6px;
+  margin-top: 10px;
 }
 
 .bloc__services .service p {
@@ -497,11 +519,16 @@ nav ul li a {
   .line {
     width: 97px;
   }
+  .bloc__services__container {
+    padding-bottom: 60px;
+  }
   .bloc__services__main h2 {
     font-size: 28px;
     line-height: 34.13px;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    padding-left: 75px;
+    padding-right: 75px;
   }
   .bloc__services__main a {
     margin-top: 0;
@@ -509,13 +536,23 @@ nav ul li a {
     padding: 15px;
     padding-left: 20px;
     padding-right: 20px;
+    font-family: "Open Sans", sans-serif;
   }
   .service {
     margin-bottom: 45px;
   }
+  .service p {
+    font-size: 17px !important;
+    line-height: 23.15px !important;
+    width: 75% !important;
+  }
   .service img {
     width: 100px !important;
     height: 100px !important;
+  }
+  .service h3 {
+    font-size: 20px !important;
+    margin-top: 0 !important;
   }
 }
 
@@ -554,6 +591,8 @@ nav ul li a {
     font-size: 14px !important;
     line-height: 19.07px !important;
     width: 90% !important;
+    padding-left: 8px;
+    padding-right: 8px;
   }
 }
 
@@ -707,6 +746,7 @@ footer .footer__logo img {
   }
   .footer__input input {
     width: 225px !important;
+    padding: 12px !important;
   }
   .footer__input input::-webkit-input-placeholder {
     font-size: 17px !important;
@@ -732,6 +772,9 @@ footer .footer__logo img {
     position: absolute;
     bottom: 40px;
     left: 0px;
+  }
+  .xoxo {
+    padding: 10px 20px 12px 20px !important;
   }
 }
 
@@ -759,11 +802,12 @@ footer .footer__logo img {
     border-radius: 7px;
     left: auto;
     top: 75px;
+    border-radius: 11px !important;
   }
   .footer__input input {
-    padding: 10px !important;
-    border-top-left-radius: 13px !important;
-    border-bottom-left-radius: 13px !important;
+    padding: 7px !important;
+    border-top-left-radius: 9px !important;
+    border-bottom-left-radius: 9px !important;
     width: 188px !important;
   }
   .footer__input input::-webkit-input-placeholder {
@@ -779,13 +823,11 @@ footer .footer__logo img {
     font-size: 14px !important;
   }
   .xoxo {
-    padding: 11px !important;
-    padding-top: 13px !important;
-    padding-left: 13px !important;
-    padding-right: 13px !important;
+    padding: 11px 16px 9px 18px !important;
     border-top-right-radius: 11px !important;
     border-bottom-right-radius: 11px !important;
     font-size: 14px !important;
+    font-weight: 600;
   }
 }
 /*# sourceMappingURL=style.css.map */
