--- a/style/_main.scss
+++ b/style/_main.scss
@@ -124,6 +124,7 @@
     line-height: 19.07px;
     margin-bottom: 0px;
     text-align: justify;
+    padding-right: 10px;
     p {
       font-size: 14px;
     }
