--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -44,7 +44,7 @@ footer {
     padding-right: 2px;
     border-radius: 15px;
     input {
-      padding: 10px;
+      padding: 14px;
 
       width: 280px;
       border-top-left-radius: 15px;
@@ -63,10 +63,7 @@ footer {
   .xoxo {
     color: #d8d8d8;
     font-size: 19px;
-    padding: 10px;
-    padding-top: 9px;
-    padding-left: 30px;
-    padding-right: 20px;
+    padding: 12px 23px 14px 25px;
     margin-left: -5px;
     background-color: #242726;
     border-top-right-radius: 15px;
