--- a/style/_main.scss
+++ b/style/_main.scss
@@ -10,7 +10,7 @@
   top: 0;
 }
 .main__information {
-  width: 450px;
+  width: 505px;
   padding: 10px;
   margin-left: 10%;
   margin-top: 12%;
@@ -18,21 +18,22 @@
   flex-direction: column;
   h1 {
     color: #fff;
-    line-height: 1.3;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
     margin-bottom: 20px;
-    font-size: 50px;
+    font-size: 58px;
+    line-height: 70.7px;
   }
   p {
     color: #bfbebf;
-    font-size: 16px;
     margin-bottom: 0;
-    // line-height: 1.4;
+    font-size: 19px;
+    text-align: justify;
+    line-height: 25.87px;
   }
 }
 .main__information__tech {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 .wrapper__btn {
   background-image: linear-gradient(
@@ -45,14 +46,13 @@
   padding: 2px;
   margin: auto;
   button {
-    height: 50px;
+    padding: 12px 23px;
     border: none;
     outline: none;
     border-radius: 15px;
     text-decoration: none;
     color: #fff;
-    width: 145px;
-    background-color: #1d1f22;
+    background-color: #242726;
   }
 }
 @media only screen and (max-width: 1199px) {
