--- a/style/_services.scss
+++ b/style/_services.scss
@@ -37,7 +37,7 @@
       #00ffd9 100%
     );
     border-radius: 15px;
-    padding: 15px;
+    padding: 16px 24px;
     color: black;
     margin: auto;
     margin-top: 50px;
@@ -74,7 +74,7 @@
       color: #807f7f;
       font-size: 19px;
       line-height: 25.87px;
-      width: 70%;
+      width: 80%;
       text-align: justify;
       font-weight: 600;
     }
@@ -162,5 +162,11 @@
       padding-left: 8px;
       padding-right: 8px;
     }
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .bloc__services {
+    width: 90%;
+    align-self: center;
   }
 }
