--- a/style/style.css
+++ b/style/style.css
@@ -180,7 +180,7 @@ nav ul li a {
 }
 
 .main__information {
-  width: 450px;
+  width: 505px;
   padding: 10px;
   margin-left: 10%;
   margin-top: 12%;
@@ -195,21 +195,23 @@ nav ul li a {
 
 .main__information h1 {
   color: #fff;
-  line-height: 1.3;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   margin-bottom: 20px;
-  font-size: 50px;
+  font-size: 58px;
+  line-height: 70.7px;
 }
 
 .main__information p {
   color: #bfbebf;
-  font-size: 16px;
   margin-bottom: 0;
+  font-size: 19px;
+  text-align: justify;
+  line-height: 25.87px;
 }
 
 .main__information__tech {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 
 .wrapper__btn {
@@ -220,14 +222,13 @@ nav ul li a {
 }
 
 .wrapper__btn button {
-  height: 50px;
+  padding: 12px 23px;
   border: none;
   outline: none;
   border-radius: 15px;
   text-decoration: none;
   color: #fff;
-  width: 145px;
-  background-color: #1d1f22;
+  background-color: #242726;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -313,13 +314,10 @@ nav ul li a {
 }
 
 .bloc {
-  padding: 50px;
-  padding-top: 115px;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding: 115px 100px 80px 120px;
   -webkit-box-shadow: 0 100px 100px 0 rgba(236, 236, 236, 0.5);
           box-shadow: 0 100px 100px 0 rgba(236, 236, 236, 0.5);
-  width: 80%;
+  width: 85%;
   margin: auto;
   margin-top: -90px;
   position: relative;
@@ -327,12 +325,16 @@ nav ul li a {
   background-color: #ffffff;
 }
 
+.bloc .bloc__left {
+  padding-right: 25px;
+}
+
 .bloc .bloc__left h2 {
   font-family: Montserrat;
-  font-size: 35px;
-  line-height: 1.2;
   font-weight: 600;
   text-align: justify;
+  font-size: 37px;
+  line-height: 48.76px;
 }
 
 .bloc .bloc__right {
@@ -348,6 +350,7 @@ nav ul li a {
 .bloc .bloc__right p {
   color: #807f7f;
   font-size: 19px;
+  font-weight: 600;
   line-height: 25.87px;
   text-align: justify;
   margin-bottom: 40px;
@@ -360,11 +363,10 @@ nav ul li a {
   font-size: 16px;
   line-height: 21.79px;
   text-align: justify;
-  padding: 10px;
-  padding-right: 15px;
-  padding-left: 15px;
   margin: auto;
   text-decoration: none;
+  font-weight: 700;
+  padding: 14px 23px;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -465,7 +467,7 @@ nav ul li a {
 .bloc__services__main a {
   background-image: linear-gradient(47.99deg, #2e8174 0%, #30a996 42.53%, #00ffd9 100%);
   border-radius: 15px;
-  padding: 15px;
+  padding: 16px 24px;
   color: black;
   margin: auto;
   margin-top: 50px;
@@ -520,7 +522,7 @@ nav ul li a {
   color: #807f7f;
   font-size: 19px;
   line-height: 25.87px;
-  width: 70%;
+  width: 80%;
   text-align: justify;
   font-weight: 600;
 }
@@ -606,6 +608,15 @@ nav ul li a {
   }
 }
 
+@media only screen and (min-width: 1200px) {
+  .bloc__services {
+    width: 90%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
 footer {
   background-color: #242726;
   padding-top: 50px;
@@ -657,7 +668,7 @@ footer .footer__logo img {
 }
 
 .footer__input_wrapper .footer__input input {
-  padding: 10px;
+  padding: 14px;
   width: 280px;
   border-top-left-radius: 15px;
   outline: none;
@@ -700,10 +711,7 @@ footer .footer__logo img {
 .footer__input_wrapper .xoxo {
   color: #d8d8d8;
   font-size: 19px;
-  padding: 10px;
-  padding-top: 9px;
-  padding-left: 30px;
-  padding-right: 20px;
+  padding: 12px 23px 14px 25px;
   margin-left: -5px;
   background-color: #242726;
   border-top-right-radius: 15px;
