--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -45,7 +45,7 @@ footer {
     border-radius: 15px;
     input {
       padding: 14px;
-
+      padding-left: 30px;
       width: 280px;
       border-top-left-radius: 15px;
       outline: none;
@@ -56,7 +56,7 @@ footer {
       color: #bcbaba;
       font-family: Montserrat;
       font-size: 19px;
-      padding-left: 20px;
+      padding-left: 0px;
       font-weight: 600;
     }
   }
@@ -71,10 +71,12 @@ footer {
   }
 }
 .footer__social-media {
+  a {
+    margin-right: 15px;
+  }
   img {
     width: 60px;
     height: auto;
-    margin-right: 15px;
   }
 }
 .footer__social-media-wrapper {
