--- a/style/_services.scss
+++ b/style/_services.scss
@@ -45,6 +45,16 @@
     font-size: 16px;
     line-height: 19px;
     font-weight: bold;
+    transition: all 150ms ease-out;
+  }
+  a:hover {
+    background-image: linear-gradient(
+      47.99deg,
+      #2e8174 100%,
+      #30a996 42.53%,
+      #00ffd9 100%
+    );
+    color: white;
   }
 }
 .bloc__services {
