--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,5 +1,6 @@
 nav {
   // background-color: white;
+  padding-top: 4px !important;
   .nav__logo {
     width: 22%;
   }
@@ -61,6 +62,7 @@ nav ul li {
   padding: 15px 23px;
   cursor: pointer;
   transition: all 150ms ease-out;
+  line-height: 21.79px;
 }
 .btn__contact:hover {
   background-image: linear-gradient(
@@ -100,7 +102,7 @@ nav ul li {
     );
     a {
       color: white !important;
-      font-weight: 600;
+      font-weight: 600 !important;
     }
   }
   .navbar-toggler-icon {
@@ -111,13 +113,14 @@ nav ul li {
   .nav__contact__fr {
     flex-direction: column;
     align-items: flex-start !important;
+    width: auto !important;
     a {
       padding-left: 0;
     }
     .btn__contact {
       background-image: none;
       text-align: left;
-      padding-left: 0;
+      padding: 8px 0px 8px 0;
     }
   }
   nav ul {
