--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,10 @@ a {
   text-decoration: none;
 }
 
+nav {
+  padding-top: 4px !important;
+}
+
 nav .nav__logo {
   width: 22%;
 }
@@ -98,6 +102,7 @@ nav ul li a {
   cursor: pointer;
   -webkit-transition: all 150ms ease-out;
   transition: all 150ms ease-out;
+  line-height: 21.79px;
 }
 
 .btn__contact:hover {
@@ -131,7 +136,7 @@ nav ul li a {
   }
   .nav__links a {
     color: white !important;
-    font-weight: 600;
+    font-weight: 600 !important;
   }
   .navbar-toggler-icon {
     background-image: url(../assets/Burger.png) !important;
@@ -146,6 +151,7 @@ nav ul li a {
     -webkit-box-align: start !important;
         -ms-flex-align: start !important;
             align-items: flex-start !important;
+    width: auto !important;
   }
   .nav__contact__fr a {
     padding-left: 0;
@@ -153,7 +159,7 @@ nav ul li a {
   .nav__contact__fr .btn__contact {
     background-image: none;
     text-align: left;
-    padding-left: 0;
+    padding: 8px 0px 8px 0;
   }
   nav ul {
     -webkit-box-align: normal;
@@ -228,6 +234,7 @@ nav ul li a {
 
 .main__information__tech {
   margin-bottom: 50px;
+  z-index: 1;
 }
 
 .wrapper__btn {
