--- a/style/style.css
+++ b/style/style.css
@@ -110,6 +110,29 @@ nav ul li a {
   color: white;
 }
 
+.nav-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.nav-item:hover::before {
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+}
+
+.nav-item::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  padding: 2px;
+  bottom: 0;
+  background-color: #00ffd9;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+  -webkit-transform: translateX(100px);
+          transform: translateX(100px);
+}
+
 @media only screen and (max-width: 1199px) {
   header {
     position: relative;
