--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -73,6 +73,23 @@ nav ul li {
   );
   color: white;
 }
+.nav-item {
+  position: relative;
+  overflow: hidden;
+}
+.nav-item:hover::before {
+  transform: translateX(0px);
+}
+.nav-item::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  padding: 2px;
+  bottom: 0;
+  background-color: #00ffd9;
+  transition: all 300ms ease-out;
+  transform: translateX(100px);
+}
 @media only screen and (max-width: 1199px) {
   header {
     position: relative;
