--- a/style/_bloc.scss
+++ b/style/_bloc.scss
@@ -100,6 +100,8 @@
 
     a {
       font-size: 12px !important;
+      padding: 10px 14px !important;
+      line-height: 16.34px !important;
     }
   }
   .bloc__left {
