--- a/style/_bloc.scss
+++ b/style/_bloc.scss
@@ -92,12 +92,9 @@
 }
 @media only screen and (max-width: 599px) {
   .bloc {
-    padding-top: 40px;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding: 40px 0px;
     margin-top: -145px;
     width: 80%;
-
     a {
       font-size: 12px !important;
       padding: 10px 14px !important;
