--- a/style/style.css
+++ b/style/style.css
@@ -463,9 +463,7 @@ nav ul li a {
 
 @media only screen and (max-width: 599px) {
   .bloc {
-    padding-top: 40px;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding: 40px 0px;
     margin-top: -145px;
     width: 80%;
   }
